--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,477 +1,419 @@
+/*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
+
+/**
+ * 1. Change the default font family in all browsers (opinionated).
+ * 2. Prevent adjustments of font size after orientation changes in IE and iOS.
+ */
+
 html {
-  -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
+  font-family: sans-serif; /* 1 */
+  -ms-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
+
+/**
+ * Remove the margin in all browsers (opinionated).
+ */
 
 body {
   margin: 0;
 }
 
+/* HTML5 display definitions
+   ========================================================================== */
+
+/**
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in Edge, IE, and Firefox.
+ * 2. Add the correct display in IE.
+ */
+
 article,
 aside,
-details,
+details, /* 1 */
 figcaption,
 figure,
 footer,
 header,
-hgroup,
-main,
+main, /* 2 */
 menu,
 nav,
 section,
-summary {
+summary { /* 1 */
   display: block;
 }
 
-
-/*
- * 1. 定义全局字体
- * 2. 修复表单元素不能继承字体样式
+/**
+ * Add the correct display in IE 9-.
  */
-body,   /*1*/
-input,select,button,textarea /*2*/
-{
-    font-family: "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans","wenquanyi micro hei","Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif;
-}
-
-input,select,textarea{
-  font-size:100%;
-}
 
 audio,
 canvas,
 progress,
 video {
   display: inline-block;
-  vertical-align: baseline;
 }
+
+/**
+ * Add the correct display in iOS 4-7.
+ */
 
 audio:not([controls]) {
   display: none;
   height: 0;
 }
 
-[hidden],
-template {
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Add the correct display in IE 10-.
+ * 1. Add the correct display in IE.
+ */
+
+template, /* 1 */
+[hidden] {
   display: none;
 }
 
+/* Links
+   ========================================================================== */
+
+/**
+ * 1. Remove the gray background on active links in IE 10.
+ * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
+ */
+
 a {
-  background-color: transparent;
+  background-color: transparent; /* 1 */
+  -webkit-text-decoration-skip: objects; /* 2 */
 }
+
+/**
+ * Remove the outline on focused links when they are also active or hovered
+ * in all browsers (opinionated).
+ */
 
 a:active,
 a:hover {
-  outline: 0;
+  outline-width: 0;
 }
 
+/* Text-level semantics
+   ========================================================================== */
+
+/**
+ * 1. Remove the bottom border in Firefox 39-.
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+
 abbr[title] {
-  border-bottom: 1px dotted;
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
 }
+
+/**
+ * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
+ */
 
 b,
 strong {
-  font-weight: bold;
+  font-weight: inherit;
 }
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * Add the correct font style in Android 4.3-.
+ */
 
 dfn {
   font-style: italic;
 }
 
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+
 h1 {
-  margin: .67em 0;
   font-size: 2em;
+  margin: 0.67em 0;
 }
 
+/**
+ * Add the correct background and color in IE 9-.
+ */
+
 mark {
+  background-color: #ff0;
   color: #000;
-  background: #ff0;
 }
+
+/**
+ * Add the correct font size in all browsers.
+ */
 
 small {
   font-size: 80%;
 }
 
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+
 sub,
 sup {
-  position: relative;
   font-size: 75%;
   line-height: 0;
+  position: relative;
   vertical-align: baseline;
 }
 
-sup {
-  top: -.5em;
+sub {
+  bottom: -0.25em;
 }
 
-sub {
-  bottom: -.25em;
+sup {
+  top: -0.5em;
 }
+
+/* Embedded content
+   ========================================================================== */
+
+/**
+ * Remove the border on images inside links in IE 10-.
+ */
 
 img {
-  border: 0;
+  border-style: none;
 }
+
+/**
+ * Hide the overflow in IE.
+ */
 
 svg:not(:root) {
   overflow: hidden;
 }
 
-figure {
-  margin: 1em 40px;
-}
+/* Grouping content
+   ========================================================================== */
 
-hr {
-  height: 1px;
-  -webkit-box-sizing: content-box;
-     -moz-box-sizing: content-box;
-          box-sizing: content-box;
-  border: none;
-  width: 100%;
-  background-color: #ccc;
-  margin: 0;
-}
-
-pre {
-  overflow: auto;
-}
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
 
 code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
+
+/**
+ * Add the correct margin in IE 8.
+ */
+
+figure {
+  margin: 1em 40px;
+}
+
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/* Forms
+   ========================================================================== */
+
+/**
+ * 1. Change font properties to `inherit` in all browsers (opinionated).
+ * 2. Remove the margin in Firefox and Safari.
+ */
 
 button,
 input,
-optgroup,
 select,
 textarea {
-  margin: 0;
-  font: inherit;
-  color: inherit;
+  font: inherit; /* 1 */
+  margin: 0; /* 2 */
 }
 
-button {
-  overflow: visible;
-}
-
-button,
-select {
-  text-transform: none;
-}
-
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer;
-}
-
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-input {
-  line-height: normal;
-}
-
-input[type="checkbox"],
-input[type="radio"] {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 0;
-}
-
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-input[type="search"] {
-  -webkit-box-sizing: content-box;
-     -moz-box-sizing: content-box;
-          box-sizing: content-box;
-  -webkit-appearance: textfield;
-}
-
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-fieldset {
-  padding: .35em .625em .75em;
-  margin: 0 2px;
-  border: 1px solid #c0c0c0;
-}
-
-legend {
-  padding: 0;
-  border: 0;
-}
-
-textarea {
-  overflow: auto;
-}
+/**
+ * Restore the font weight unset by the previous rule.
+ */
 
 optgroup {
   font-weight: bold;
 }
 
-table {
-  border-spacing: 0;
-  border-collapse: collapse;
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+
+button,
+input { /* 1 */
+  overflow: visible;
 }
 
-td,
-th {
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+ *    controls in Android 4.
+ * 2. Correct the inability to style clickable types in iOS and Safari.
+ */
+
+button,
+html [type="button"], /* 1 */
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; /* 2 */
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
   padding: 0;
 }
 
-
 /**
- * 闭合浮动
+ * Restore the focus styles unset by the previous rule.
  */
-.fn-clear:before,
-.fn-clear:after {
-    content: "";
-    display: table;
-}
 
-.fn-clear:after {
-    clear: both;
-}
-
-.fn-clear {
-    *zoom: 1; /* IE6-7 触发 hasLayout */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
 }
 
 /**
- * 设置左右浮动
+ * Change the border, margin, and padding in all browsers (opinionated).
  */
-.fn-left,.fn-right {
-    display:inline;
-}
-.fn-left {
-    float:left;
-}
-.fn-right {
-    float:right;
+
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
 }
 
 /**
- * 元素隐藏
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
  */
-.fn-hide {
-    display: none !important;
-    visibility: hidden !important;
+
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
 }
 
 /**
- * 显示属性
+ * Remove the default vertical scrollbar in IE.
  */
-.fn-block {
-  display: block !important;
-}
-.fn-inline {
-  display: inline !important;
-}
-.fn-inline-block {
-  display: inline-block !important;
-}
 
-
-
-/**
- * 文本隐藏
- */
-.fn-text-hide {
-    text-indent: 100%; /* 1 */
-    white-space: nowrap;
-    overflow: hidden;
+textarea {
+  overflow: auto;
 }
 
 /**
- * 文本对齐方式，左中右两端
+ * 1. Add the correct box sizing in IE 10-.
+ * 2. Remove the padding in IE 10-.
  */
-.fn-text-left {
-    text-align: left !important;
-}
-.fn-text-center {
-    text-align: center !important;
-}
-.fn-text-right {
-    text-align: right !important;
-}
-.fn-text-justify {
-    text-align: justify !important;
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
 }
 
 /**
- * 文本强制不换行
+ * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-.fn-text-nowrap {
-    white-space: nowrap;
-    word-wrap: normal;
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
 }
 
 /**
- * 文本强制换行
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
  */
-.fn-text-break {
-    white-space: normal;
-    word-wrap: break-word;
+
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
- * 文字溢出显示省略号
- * 1. Opera 9-10.6
- * 2. Chrome 21+ bug https://bugs.webkit.org/show_bug.cgi?id=121902
+ * Remove the inner padding and cancel buttons in Chrome and Safari on OS X.
  */
-.fn-text-ellipsis {
-    display: block;
-    white-space: nowrap;
-    word-wrap: normal;
-    overflow: hidden;
-    -o-text-overflow: ellipsis; /* 1 */
-    text-overflow: ellipsis;
-    text-align: left; /* 2 */
-}
 
-/**
- * 统一用双线显示人民币符号「&yen;(￥)」
- */
-.fn-text-rmb,
-.fn-text-yuan {
-    font-family: arial;
-    font-style: normal;
-}
-
-
-/**
- * 三角符号
- */
-.fn-caret {
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: 2px;
-  vertical-align: middle;
-  border-top: 4px dashed;
-  border-top: 4px solid \9;
-  border-right: 4px solid transparent;
-  border-left: 4px solid transparent;
-}
-
-/**
- * 关闭符号
- */
-.fn-close {
-  float: right;
-  font-size: 21px;
-  font-weight: bold;
-  line-height: 1;
-  color: #000;
-  text-shadow: 0 1px 0 #fff;
-  filter: alpha(opacity=20);
-  opacity: .2;
-}
-.fn-close:hover,
-.fn-close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-  filter: alpha(opacity=50);
-  opacity: .5;
-}
-button.fn-close {
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
-  padding: 0;
-  cursor: pointer;
-  background: transparent;
-  border: 0;
-}
-
-/*
- * 自适应两端对齐布局
- */
-.fn-layout-justify {
-    font-size: 0;
-    line-height: inherit;
-    text-align: justify;
-    text-justify: inter-ideograph; /* IE 6-7 */
-    *zoom: 1; /* IE 6-7 触发 hasLayout 使一行也能两端对齐 */
-    -moz-text-align-last: justify;
-    -webkit-text-align-last: justify;
-    text-align-last: justify;/* IE 8+ */
-}
-/**
- * 不支持 text-align-last 的浏览器用伪元素模拟
- * 1. margin-left:100% 仅 WebKit 支持
- */
-.fn-layout-justify:after {
-    content: "";
-    display: inline-block;
-    width: 100%; /* 1 */
-}
-
-/* 子元素取消两端对齐 */
-.fn-layout-justify .dib {
-    display: inline-block;
-    -moz-text-align-last: auto;
-    -webkit-text-align-last: auto;
-    text-align-last: auto;
-    text-justify: auto;
-    text-align: left;
-    font-size: 12px;
-    letter-spacing: normal;
-    word-spacing: normal;
-    *display: inline;
-    *zoom: 1;
 }
 
 /**
- * 水平列表平铺
+ * Correct the text style of placeholders in Chrome, Edge, and Safari.
  */
-.fn-layout-tiled {
-	display: -webkit-box;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-}
-.fn-layout-tiled li {
-  -webkit-box-flex: 1;
-  width: 100%;
-  text-align: center;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-box-pack: center;
-  -webkit-box-align: center; 
+
+::-webkit-input-placeholder {
+  color: inherit;
+  opacity: 0.54;
 }
 
 /**
- * 垂直上下居中
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
  */
-.fn-layout-vcenter{
-    width: 100%;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-box-pack: center;
-    -webkit-box-align: center;
-    text-align: center;
-    height: 150px; 
-}
-input{
-	margin: 0;
-	padding: 0;
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
